update pre-tx and volume calculation job

--- a/notebooks/pre-tx-calculation.ipynb
+++ b/notebooks/pre-tx-calculation.ipynb
@@ -2,8 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f73f4f88",
+   "execution_count": null,
+   "id": "c031afca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import argparse, sys\n",
+    "\n",
+    "# parser=argparse.ArgumentParser()\n",
+    "\n",
+    "# parser.add_argument(\"-b\", \"--base_path\", help=\"S3 bucket base path\", required=True)\n",
+    "# parser.add_argument(\"-d\", \"--date\", help=\"Calculate date\", required=True)\n",
+    "# parser.add_argument(\"-n\", \"--name\", help=\"Name of chain to calculate [bsc|eth|polygon]\", required=True)\n",
+    "# parser.add_argument(\"-s\", \"--symbol\", help=\"Symbol of chain to calculate [BNB|ETH|MATIC]\", required=True)\n",
+    "\n",
+    "# args=parser.parse_args()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36addc26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_path = \"s3a://octan-labs-bsc/export-by-date\"\n",
+    "base_path = \".\"\n",
+    "date = \"2023-06-06\"\n",
+    "name = \"bsc\" # \n",
+    "symbol = \"BNB\" # "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d61b28e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a46c44aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +62,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/11 08:34:54 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "23/07/12 02:46:25 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
    "source": [
     "spark = SparkSession \\\n",
     "    .builder \\\n",
-    "    .appName(\"Preprocessdata\") \\\n",
+    "    .appName(\"PreTxnsCalculator\") \\\n",
     "    .getOrCreate()"
    ]
   },
@@ -42,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "44a19283",
    "metadata": {},
    "outputs": [],
@@ -52,7 +93,7 @@
     "    StructField(\"symbol\", StringType(), True), \\\n",
     "    StructField(\"name\", StringType(), True), \\\n",
     "    StructField(\"decimals\", LongType(), True), \\\n",
-    "    StructField(\"total_supply\", LongType(), True), \\\n",
+    "    StructField(\"total_supply\", DecimalType(38,0), True), \\\n",
     "    StructField(\"block_number\", LongType(), True), \\\n",
     "  ])"
    ]
@@ -96,53 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53107dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "1f39c5dc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# base_path = \"s3a://octan-labs-bsc/export-by-date\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bc765d02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_path = \".\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b3932666",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "date = \"2023-06-06\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2674c8b",
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "57442cfe",
    "metadata": {},
    "outputs": [],
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a9d94c23",
    "metadata": {},
    "outputs": [],
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "2e8e6de5",
    "metadata": {},
    "outputs": [],
@@ -172,7 +175,7 @@
     "tokens_df = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", True) \\\n",
     "    .schema(tokens_schema) \\\n",
-    "    .load(\"{base_path}/tokens/*.csv\".format(base_path = base_path))"
+    "    .load(\"{base_path}/cmc_tokens/cmc_{name}_tokens.csv\".format(base_path = base_path, name = name))"
    ]
   },
   {
@@ -182,10 +185,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cmc_historicals_df = spark.read.format(\"csv\") \\\n",
-    "#     .option(\"header\", True) \\\n",
-    "#     .schema(cmc_historical_schema) \\\n",
-    "#     .load(\"s3a://octan-labs-bsc/cmc_historicals/*.csv\")"
+    "cmc_historicals_df = spark.read.format(\"csv\") \\\n",
+    "    .option(\"header\", True) \\\n",
+    "    .schema(cmc_historical_schema) \\\n",
+    "    .load(\"s3a://octan-labs-bsc/cmc_historicals/*.csv\")"
    ]
   },
   {
@@ -195,42 +198,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cmc_addresses_df = spark.read.format(\"csv\") \\\n",
-    "#     .option(\"header\", True) \\\n",
-    "#     .schema(cmc_address_schema) \\\n",
-    "#     .load(\"s3a://octan-labs-bsc/cmc_addresses/*.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d12adb9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fec34cc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "48b38297",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmc_historicals_df = spark.read.format(\"csv\") \\\n",
-    "    .schema(cmc_historical_schema) \\\n",
-    "    .load(\"./cmc_historicals/*.csv\")\n",
     "cmc_addresses_df = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", True) \\\n",
     "    .schema(cmc_address_schema) \\\n",
-    "    .load(\"./cmc_addresses/*.csv\")"
+    "    .load(\"s3a://octan-labs-bsc/cmc_addresses/*.csv\")"
    ]
   },
   {
@@ -243,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "33d2e14e",
    "metadata": {},
    "outputs": [],
@@ -253,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "44c8925e",
    "metadata": {},
    "outputs": [],
@@ -271,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "0d454e12",
    "metadata": {},
    "outputs": [],
@@ -285,20 +256,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "320c0021",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32025766372680664"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# change name, symbol foreach networks\n",
-    "\n",
-    "name = \n",
     "\n",
     "import time\n",
     "from pyspark.sql import functions as F\n",
     "\n",
     "\n",
     "start_time = time.time()\n",
+    "\n",
     "\n",
     "result_df = spark.sql(\"\"\"\n",
     "SELECT \n",
@@ -311,7 +292,7 @@
     "    tx.value,\n",
     "    null as token_transfer,\n",
     "    null as token_contract,\n",
-    "    CAST(((tx.value / POWER(10, 18)) * cmc_h.open) AS volume AS varchar),\n",
+    "    ((tx.value / POWER(10, 18)) * cmc_h.open) AS volume,\n",
     "    (tx.receipt_gas_used * tx.gas_price) / POWER(10,18) as gas_spent,\n",
     "    ((tx.receipt_gas_used * tx.gas_price) / POWER(10,18)) * cmc_h.open as gas_spent_usd\n",
     "FROM transactions tx\n",
@@ -334,7 +315,7 @@
     "    null as value,\n",
     "    tt.value as token_transfer,\n",
     "    tt.token_address,\n",
-    "    CAST(((tt.value / POWER(10, t.decimals)) * cmc_h.open) AS volume,\n",
+    "    ((tt.value / POWER(10, t.decimals)) * cmc_h.open) AS volume,\n",
     "    (tx.receipt_gas_used * tx.gas_price) / POWER(10,18) as gas_spent,\n",
     "    ((tx.receipt_gas_used * tx.gas_price) / POWER(10,18)) * native_cmc_h.open as gas_spent_usd\n",
     "FROM token_transfers tt\n",
@@ -354,10 +335,10 @@
     "         tx.block_timestamp < timestamp(native_cmc_h.timestamp) AND \n",
     "         tx.block_timestamp >  timestamp(native_cmc_h.timestamp - 86400)\n",
     "    )\n",
-    "\"\"\".format(name = \"bsc\", symbol = \"BNB\")) \\\n",
+    "\"\"\".format(name = name, symbol = symbol)) \\\n",
     "    .withColumn('volume', format_number('volume', 10)) \\\n",
     "    .withColumn('gas_spent', format_number('gas_spent', 10)) \\\n",
-    "    .withColumn('gas_spent_usd', format_number('gas_spent_usd', 10)) \\\n",
+    "    .withColumn('gas_spent_usd', format_number('gas_spent_usd', 10))\n",
     "\n",
     "\n",
     "time.time() - start_time"
@@ -373,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "564d4223",
    "metadata": {},
    "outputs": [
@@ -387,10 +368,10 @@
     {
      "data": {
       "text/plain": [
-       "5.434847831726074"
+       "8.26365852355957"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
