--- a/notebooks/volume-calculation.ipynb
+++ b/notebooks/volume-calculation.ipynb
@@ -2,8 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae2f483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import argparse, sys\n",
+    "\n",
+    "# parser=argparse.ArgumentParser()\n",
+    "\n",
+    "# parser.add_argument(\"-b\", \"--base_path\", help=\"S3 bucket base path\", required=True)\n",
+    "# parser.add_argument(\"-d\", \"--date\", help=\"Calculate date\", required=True)\n",
+    "\n",
+    "# args=parser.parse_args()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "f73f4f88",
+   "id": "6ee8f7db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# base_path = \"s3a://octan-labs-bsc/export-by-date\"\n",
+    "base_path = \".\"\n",
+    "date = \"2023-06-06\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d462b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65c9d0e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "253ee044",
    "metadata": {},
    "outputs": [
@@ -21,14 +58,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/11 07:33:50 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "23/07/12 03:33:23 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
    "source": [
     "spark = SparkSession \\\n",
     "    .builder \\\n",
-    "    .appName(\"Preprocessdata\") \\\n",
+    "    .appName(\"TxVolumeCalculator\") \\\n",
     "    .getOrCreate()"
    ]
   },
@@ -42,45 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1f39c5dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# base_path = \"s3a://octan-labs-bsc/export-by-date\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "bc765d02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_path = \".\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b3932666",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "date = \"2023-06-06\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2674c8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "f4fa706c",
    "metadata": {},
    "outputs": [],
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "57442cfe",
    "metadata": {},
    "outputs": [],
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5d12adb9",
    "metadata": {},
    "outputs": [
@@ -135,16 +134,16 @@
       "+------------+--------------------+--------------------+-------+--------+-----------+-----------------+--------------+--------------+--------------------+--------------------+--------------------+\n",
       "|block_number|        from_address|          to_address|    gas|gas_used|  gas_price|            value|token_transfer|token_contract|              volume|           gas_spent|       gas_spent_usd|\n",
       "+------------+--------------------+--------------------+-------+--------+-----------+-----------------+--------------+--------------+--------------------+--------------------+--------------------+\n",
-      "|    28849368|0x81f403fe697cfcf...|0x2b8ce9960900859...|  44935|   44935|30000000000|                0|          null|          null|               0E-18|0.001348050000000000|0.373320382391397140|\n",
-      "|    28849368|0xb0644fd7af97005...|0x63714c713bf14de...| 600000|   22218| 7000000000|                0|          null|          null|               0E-18|0.000155526000000000|0.043070380024334730|\n",
-      "|    28849368|0xf576c7f17bc5a83...|0xa47232e28a568b7...| 730590|   31269| 6219894445|                0|          null|          null|               0E-18|0.000194489879400705|0.053860788657043815|\n",
-      "|    28849368|0x411bac65eb91ebd...|0x8ac76a51cc950d9...|  47467|   47152| 6000000000|                0|          null|          null|               0E-18|0.000282912000000000|0.078347847648911370|\n",
-      "|    28849368|0xb0e5ec2a0bb8b8f...|0xd03ba4005ae4ae8...| 160000|   21000| 6000000000|83900000000000000|          null|          null|23.23473171072158...|0.000126000000000000|0.034893637610857196|\n",
-      "|    28849368|0x82e7a4594cbc68d...|0xf2eebf2dc45bc7e...|3000000|  176509| 6000000000|                0|          null|          null|               0E-18|0.001059054000000000|0.293287670526418740|\n",
-      "|    28849368|0x356dc48d74f107c...|0x55d398326f99059...| 160000|   36115| 6000000000|                0|          null|          null|               0E-18|0.000216690000000000|0.060008748681719410|\n",
-      "|    28849368|0x4982085c9e2f89f...|0x55d398326f99059...|  76708|   51115| 6000000000|                0|          null|          null|               0E-18|0.000306690000000000|0.084932775546617400|\n",
-      "|    28849368|0x9a3fefe7072c082...|0x7b62d2ba99b7948...|1000000|  299107| 5863256024|                0|          null|          null|               0E-18|0.001753740919570568|0.485669842149419550|\n",
-      "|    28849368|0xc89d99db7b5de93...|0x7b62d2ba99b7948...| 400000|   81734| 5235050022|                0|          null|          null|               0E-18|0.000427881578498148|0.118494799527586700|\n",
+      "|    28849368|0x81f403fe697cfcf...|0x2b8ce9960900859...|  44935|   44935|30000000000|                0|          null|          null|               0E-18|0.001348050000000000|0.373320382400000000|\n",
+      "|    28849368|0xb0644fd7af97005...|0x63714c713bf14de...| 600000|   22218| 7000000000|                0|          null|          null|               0E-18|0.000155526000000000|0.043070380000000000|\n",
+      "|    28849368|0xf576c7f17bc5a83...|0xa47232e28a568b7...| 730590|   31269| 6219894445|                0|          null|          null|               0E-18|0.000194489900000000|0.053860788700000000|\n",
+      "|    28849368|0x411bac65eb91ebd...|0x8ac76a51cc950d9...|  47467|   47152| 6000000000|                0|          null|          null|               0E-18|0.000282912000000000|0.078347847600000000|\n",
+      "|    28849368|0xb0e5ec2a0bb8b8f...|0xd03ba4005ae4ae8...| 160000|   21000| 6000000000|83900000000000000|          null|          null|23.23473171070000...|0.000126000000000000|0.034893637600000000|\n",
+      "|    28849368|0x82e7a4594cbc68d...|0xf2eebf2dc45bc7e...|3000000|  176509| 6000000000|                0|          null|          null|               0E-18|0.001059054000000000|0.293287670500000000|\n",
+      "|    28849368|0x356dc48d74f107c...|0x55d398326f99059...| 160000|   36115| 6000000000|                0|          null|          null|               0E-18|0.000216690000000000|0.060008748700000000|\n",
+      "|    28849368|0x4982085c9e2f89f...|0x55d398326f99059...|  76708|   51115| 6000000000|                0|          null|          null|               0E-18|0.000306690000000000|0.084932775500000000|\n",
+      "|    28849368|0x9a3fefe7072c082...|0x7b62d2ba99b7948...|1000000|  299107| 5863256024|                0|          null|          null|               0E-18|0.001753740900000000|0.485669842100000000|\n",
+      "|    28849368|0xc89d99db7b5de93...|0x7b62d2ba99b7948...| 400000|   81734| 5235050022|                0|          null|          null|               0E-18|0.000427881600000000|0.118494799500000000|\n",
       "+------------+--------------------+--------------------+-------+--------+-----------+-----------------+--------------+--------------+--------------------+--------------------+--------------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0d454e12",
    "metadata": {},
    "outputs": [],
@@ -206,32 +205,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "52995d8d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "\"volume\" is not a numeric column. Aggregation function can only be applied on a numeric column.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpre_tx_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupBy\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfrom_address\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msum\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvolume\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;241m10\u001b[39m)\n",
-      "File \u001b[0;32m/opt/spark/python/pyspark/sql/group.py:50\u001b[0m, in \u001b[0;36mdf_varargs_api.<locals>._api\u001b[0;34m(self, *cols)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_api\u001b[39m(\u001b[38;5;28mself\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGroupedData\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39mcols: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m DataFrame:\n\u001b[1;32m     49\u001b[0m     name \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n\u001b[0;32m---> 50\u001b[0m     jdf \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jgd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_to_seq\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcols\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(jdf, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msession)\n",
-      "File \u001b[0;32m/opt/spark/python/lib/py4j-0.10.9.5-src.zip/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1315\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1316\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1320\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1321\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1322\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1324\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1325\u001b[0m     temp_arg\u001b[38;5;241m.\u001b[39m_detach()\n",
-      "File \u001b[0;32m/opt/spark/python/pyspark/sql/utils.py:196\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    192\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    193\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    194\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    195\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 196\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    198\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
-      "\u001b[0;31mAnalysisException\u001b[0m: \"volume\" is not a numeric column. Aggregation function can only be applied on a numeric column."
-     ]
-    }
-   ],
-   "source": [
-    "pre_tx_df.groupBy(\"from_address\").sum(\"volume\").show(10)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "ff0e93ef",
    "metadata": {},
@@ -240,17 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "be4971ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.07826685905456543"
+       "0.025368452072143555"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,18 +232,21 @@
     "# change name, symbol foreach networks\n",
     "\n",
     "import time\n",
-    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.functions import format_number\n",
     "\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
     "result_df = spark.sql(\"\"\"\n",
-    "SELECT from_address as address, SUM(volume) FROM pre_tx_df\n",
+    "SELECT from_address as address, SUM(volume) as volume FROM pre_tx_df\n",
     "GROUP BY from_address\n",
     "UNION ALL\n",
-    "SELECT to_address as address, SUM(volume) FROM pre_tx_df\n",
+    "SELECT to_address as address, SUM(volume) as volume FROM pre_tx_df\n",
     "GROUP BY to_address\n",
-    "\"\"\")\n",
+    "UNION ALL\n",
+    "SELECT token_contract as address, SUM(volume) as volume FROM pre_tx_df\n",
+    "GROUP BY token_contract\n",
+    "\"\"\").withColumn('volume', format_number('volume', 10)) \n",
     "\n",
     "\n",
     "time.time() - start_time"
@@ -278,12 +254,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "28ed4b20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 12:=========>       (7 + 5) / 12][Stage 13:=>               (1 + 7) / 12]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------+--------------+\n",
+      "|address                                   |volume        |\n",
+      "+------------------------------------------+--------------+\n",
+      "|0x2efc0a7e59c0508fdd93941f89743836a1d2ae75|133.2797818980|\n",
+      "|0x48e2779ea605bdca4467f53c9e3ec6ae419f1f9c|0.0000000000  |\n",
+      "|0x675d013f45810a3a5fd14877276ed2b08191862d|0.0000000000  |\n",
+      "|0x8eae03bee1a2ae097ac11661eec541ba538ff8fe|0.0000000000  |\n",
+      "|0x50f19fde93bb8b2419300ad08dd3eaac431804b0|0.0000000000  |\n",
+      "|0x06d5b5d1a7beaea6b5587c8b1c4ff811c808968a|0.0000000000  |\n",
+      "|0x3b7d6336ac01106e51f2cffd564ec7f8bdea1057|1.2140597751  |\n",
+      "|0x6238872a0bd9f0e19073695532a7ed77ce93c69e|0.0000000000  |\n",
+      "|0x9b1426d1ee4c57e9e5b64964df03884c7da1e7d6|398.0622802532|\n",
+      "|0x6d2d7f09e0718a4f78813fb9b1ffb5ce6abfd6d0|0.0000000000  |\n",
+      "+------------------------------------------+--------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "# result_df.count()"
+    "# result_df.show(10, False)"
    ]
   },
   {
@@ -296,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "564d4223",
    "metadata": {},
    "outputs": [
@@ -310,10 +325,10 @@
     {
      "data": {
       "text/plain": [
-       "7.45465874671936"
+       "1.8597967624664307"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +339,7 @@
     "result_df.repartition(1) \\\n",
     "    .write \\\n",
     "    .option(\"header\",True) \\\n",
-    "    .csv(\"{base_path}/pre-tx/date={date}/\".format(base_path = base_path, date = date))\n",
+    "    .csv(\"{base_path}/tx-volumes/date={date}/\".format(base_path = base_path, date = date))\n",
     "\n",
     "time.time() - start_time"
    ]
